Change Log
----------

  V0.35
  
  - Fixes:
     - Renamed "Textbox" to "TextBox".
     - Corrected case of "PackedFontBase.h" include in "packedfontbase.cpp"
       (thanks Gattman, bug 2101099).
     - Removed offcolour pixels from around @ symbol in sysfont bitmap.
     - Moved @ symbol in tinyfont.bmp to correct ASCII location.
     - SkinnedWindow class moves to front when clicked.
	 
  - New Features:
     - Button has different appearance when disabled.
     - CheckBox has different appearance when disabled.
     - ContextMenuItem has different appearance when disabled.
     - CycleButton has different appearance when disabled.
     - RadioButton has different appearance when disabled.
     - Added Keyboard gadget.
     - Added all missing 7-bit ASCII glyphs to sysfont.
     - Added keyboard example.
     - Added TextBox::addText(char).
     - Added TextBox::setText(char).
     - Added MultiLineTextBox::addText(char).
     - Added MultiLineTextBox::setText(char).
     - Added WoopsiTimer gadget.
     - Woopsi::registerForVBL() and Woopsi::unregisterFromVBL() now only work
       with timers; all VBL code now is handled with timer gadgets.
     - Removed EVENT_VBL event.
     - Removed Gadget::vbl().
     - AnimButton automatically animates as it has as built-in timer gadget.
     - Added missing glyphs to tinyfont.bmp.
     - Added timer example.


  V0.34 (20080702)
  
  - Fixes:
     - All gadgets have protected copy constructors.
     - Added destructor to DimmedScreen class.
     - Replaced SuperBitmap::drawLine() with a function that works correctly.
     - Fixed crash in SuperBitmap::floodFill() when pixel stack overflowed the
       DS' stack.
     - Fixed bug in SuperBitmap::floodFill() that prevented rows above the
       initial click point being filled and occasionally froze the DS.
     - Fixed path null pointer crash in FileRequester constructor.
     - SuperBitmap::drawHorizLine() no longer tries to DMA_Force() if the width