@@ -3,8 +3,8 @@
 
 ContextMenuItem::ContextMenuItem(s16 x, s16 y, u16 width, u16 height, const char* text, u32 value, FontBase* font) : TextBox(x, y, width, height, text, font) {
 	setBorderless(true);
-	setTextPositionVert(TEXT_POSITION_VERT_CENTRE);
-	setTextPositionHoriz(TEXT_POSITION_HORIZ_LEFT);
+	setTextAlignmentVert(TEXT_ALIGNMENT_VERT_CENTRE);
+	setTextAlignmentHoriz(TEXT_ALIGNMENT_HORIZ_LEFT);
 	_value = value;
 }
 
