@@ -17,19 +17,19 @@ public:
 	/**
 	 * Enum of horizontal alignment options.
 	 */
-	enum TextPositionHoriz {
-		TEXT_POSITION_HORIZ_CENTRE = 0,		/**< Centre the text */
-		TEXT_POSITION_HORIZ_LEFT = 1,		/**< Align left */
-		TEXT_POSITION_HORIZ_RIGHT = 2		/**< Align right */
+	enum TextAlignmentHoriz {
+		TEXT_ALIGNMENT_HORIZ_CENTRE = 0,		/**< Centre the text */
+		TEXT_ALIGNMENT_HORIZ_LEFT = 1,		/**< Align left */
+		TEXT_ALIGNMENT_HORIZ_RIGHT = 2		/**< Align right */
 	};
 
 	/**
 	 * Enum of vertical alignment options.
 	 */
-	enum TextPositionVert {
-		TEXT_POSITION_VERT_CENTRE = 0,		/**< Align to centre of textbox */
-		TEXT_POSITION_VERT_TOP = 1,			/**< Align to top of textbox */
-		TEXT_POSITION_VERT_BOTTOM = 2		/**< Align to bottom of textbox */
+	enum TextAlignmentVert {
+		TEXT_ALIGNMENT_VERT_CENTRE = 0,		/**< Align to centre of textbox */
+		TEXT_ALIGNMENT_VERT_TOP = 1,			/**< Align to top of textbox */
+		TEXT_ALIGNMENT_VERT_BOTTOM = 2		/**< Align to bottom of textbox */
 	};
 
 	/**
@@ -68,15 +68,15 @@ public:
 
 	/**
 	 * Set the horizontal alignment of text within the textbox.
-	 * @param position The horizontal position of the text.
+	 * @param alignment The horizontal position of the text.
 	 */
-	virtual void setTextPositionHoriz(TextPositionHoriz position);
+	virtual void setTextAlignmentHoriz(TextAlignmentHoriz alignment);
 	
 	/**
 	 * Set the vertical alignment of text within the textbox.
-	 * @param position The vertical position of the text.
+	 * @param alignment The vertical position of the text.
 	 */
-	virtual void setTextPositionVert(TextPositionVert position);
+	virtual void setTextAlignmentVert(TextAlignmentVert alignment);
 	
 	/**
 	 * Returns a pointer to the string shown in the textbox.
@@ -129,8 +129,8 @@ protected:
 	u16 _textX;								/**< X co-ordinate of the text relative to the gadget */
 	u16 _textY;								/**< Y co-ordinate of the text relative to the gadget */
 	u8 _padding;							/**< Padding around the text in pixels */
-	TextPositionHoriz _hPos;				/**< Horizontal alignment of the text */
-	TextPositionVert _vPos;					/**< Vertical alignment of the text */
+	TextAlignmentHoriz _hAlignment;			/**< Horizontal alignment of the text */
+	TextAlignmentVert _vAlignment;			/**< Vertical alignment of the text */
 
 	/**
 	 * Calculate the position of the string based on its length and the alignment options.
